# Resto

./: .gitignore  CMakeLists.txt  README  README.md  Resource.rc  Resto.pro  appInfo.cmake  appInfo.pri  deployment.cmake  deployment.pri  help.odt  orgInfo.cmake  orgInfo.pri  qml.qrc  resource.h
.github/workflows/: build.yml  cmake.yml  continuous.yml  delivery.yml  deploy.yml  manual-delivery.yml  manual-delivery_develop.yml
cpp/: controller.cpp  controller.h  main.cpp  settings.cpp  settings.h  settingscontroller.cpp  settingscontroller.h
cpp/controller/: controller.cpp  controller.h  cyclescontroller.cpp  cyclescontroller.h  settingscontroller.cpp  settingscontroller.h  timercontroller.cpp  timercontroller.h  updatecontroller.cpp  updatecontroller.h
cpp/model/: settings.cpp  settings.h
cpp/utility/: helpers.cpp  helpers.h
cpp/view/: traymanager.cpp  traymanager.h
cpp/workers/: backupmanager.cpp  backupmanager.h  savemanager.cpp  savemanager.h  singleappmanager.cpp  singleappmanager.h
design/: pattern.xcf
help/: help.html
installers/config/: config.xml  control.qs
js/: resourceInfo.js
qml/: ConnectionsManager.qml  DialogsManager.qml  MainContent.qml  Style.qml  main.qml
qml/components/: Background.qml  BarGradient.qml  ClickableLabel.qml  ColorPicker.qml  CustomLabel.qml  CustomSpinBox.qml  CustomSwitch.qml  Decorative.qml  EditableIntegerLabel.qml  FormElement.qml  ImageButton.qml  Label.qml  LabelInput.qml  Overlay.qml  Spacer.qml  SpacerLine.qml  SpinBox.qml  Switch.qml  TabTextButton.qml  TabView.qml  TextBox.qml  TextButton.qml  TimeProgressBar.qml  TimeSelector.qml
qml/components/helpers/: BarGradient.qml  BarGradientLabel.qml  BarTextGradient.qml  LayoutImage.qml  LayoutItem.qml  SpinBoxControl.qml  ValueEditMode.qml
qml/dialogs/: AboutDialog.qml  BreakDialog.qml  BreakRequestDialog.qml  ChangeTimeDialog.qml  CustomDialog.qml  EndWorkRequestDialog.qml  SettingsDialog.qml  UpdateInfoDialog.qml
qml/dialogs/subitems/: LogicSettings.qml  SettingsPage.qml  TimesSettings.qml  VisualSettings.qml
qml/style/: Style.qml  StyleFont.qml
qml/style/helpers/: ColorPallete.qml  qmldir
qml/utils/: UiUtils.qml  qmldir
scripts/desktop/common/data/installer/: config.xml  control.qs  installscript.qs  package.xml
scripts/desktop/linux/: AppRun  create-delivery.sh  create-installer.sh  create-package.sh  variables.sh
scripts/desktop/linux/data/: entry.desktop
scripts/desktop/linux/data/installer/: config.xml
scripts/desktop/windows/: create-delivery.sh  create-installer.sh  create-package.sh  variables.sh
scripts/desktop/windows/data/installer/: config.xml
scripts/linux/: create-installer.sh  create-package.sh  variables.sh
scripts/linux/data/installer/: config.xml  control.qs
scripts/windows/: create-package.sh  variables.sh
